envs/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service  
spec:
  selector:
    app: service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      appProtocol: http
---
apiVersion: v1
kind: Service
metadata:
  name:  metrics
  labels:    
    name: metrics
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /metrics/prometheus
    prometheus.io/port: '8081'
spec:
  selector:
    app: metrics
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
